turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:95: error: not found: value init
		init();
                ^